[metadata]
name = cloudlog
version = attr: cloudlog.VERSION
author = Chris L Chapman
author_email = Chris@SeattleCode.dev
description = Expanded logging features on GCP - GAE with google.cloud.logging [Google Cloud Platform - Google App Engine].
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seattlechris/cloudlog
keywords = Google Cloud Platform, Google App Engine, logging, flask, python, GCP, GAE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Flask
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
# package_dir =
#     = lsd
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = False  # True includes additional files described in MANIFEST.in
install_requires =
    flask
    google-cloud-logging

[options.packages.find]
where = cloudlog
