[metadata]
name =  attr: cloudlog.__module_name__
version = attr: cloudlog.__version__
author = attr: cloudlog.__author__
author_email = attr: cloudlog.__email__
license =  attr: cloudlog.__license__
description =  attr: cloudlog.__description__
long_description = file: README.md
long_description_content_type = text/markdown
url =  attr: cloudlog.__repository__
keywords = Google Cloud Platform, Google App Engine, logging, flask, python, GCP, GAE
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Flask
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = False  # True includes additional files described in MANIFEST.in
install_requires =
    flask
    google-cloud-logging

[options.packages.find]
where = src

# Pipenv virtualsenv - Is this info needed?
    # = /home/chris/.virtualenvs/log_data_structure-wNCwV1qO/lib/python3.7/site-packages
